scripts/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-hive
  labels:
    app: the-hive
spec:
  replicas: 2
  selector:
    matchLabels:
      app: the-hive
  template:
    metadata:
      labels:
        app: the-hive
    spec:
      containers:
        - name: the-hive-api
          image: hivebox:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
