scripts/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-hive-api
spec:
  selector:
    app: the-hive
  ports:
    - port: 80
      targetPort: 8000

  type: LoadBalancer
